fixed z-index loading issue added website to chart title

--- a/WadGraphEs.MetricsEndpoint/WadGraphEs.MetricsEndpoint/content/dashboard/dashboard.css
+++ b/WadGraphEs.MetricsEndpoint/WadGraphEs.MetricsEndpoint/content/dashboard/dashboard.css
@@ -112,7 +112,7 @@ input.typeahead.tt-query{ /* This is optional */
 }
 
 .chart .chart-loader {
-    z-index:    2000;
+    z-index:    500;
     background: rgba( 255, 255, 255, .8 ) 
                 url('/images/ajax-loader.gif') 
                 50% 50% 
